fix subheader position misalign issue

--- a/src/frontend/src/components/public/PIASubHeader/_piasubheader.scss
+++ b/src/frontend/src/components/public/PIASubHeader/_piasubheader.scss
@@ -1,8 +1,8 @@
 .subheader-container {
     display: flex;
-    position: relative;
-    top: 150px;
-    height: $navbar-height;
+    position: fixed;
+    top: $piasubheader-height;
+    height: $piasubheader-height;
     width: 100%;
     background-color: $bg-white;
     z-index: 100;
